parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> top
Rule 1     top -> procedimento
Rule 2     top -> top procedimento
Rule 3     procedimento -> declaracao
Rule 4     procedimento -> funcao
Rule 5     tipo -> INTEIRO
Rule 6     tipo -> FLUTUANTE
Rule 7     funcao -> prototipo corpo FIM
Rule 8     prototipo -> tipo ID LPAR declaracao_args RPAR
Rule 9     declaracao -> tipo COLON ID
Rule 10    declaracao_args -> <empty>
Rule 11    declaracao_args -> declaracao
Rule 12    declaracao_args -> declaracao COMMA declaracao_args
Rule 13    expressao_args -> <empty>
Rule 14    expressao_args -> expressao
Rule 15    expressao_args -> expressao COMMA expressao_args
Rule 16    expressao -> expressao_binaria
Rule 17    expressao -> chamada
Rule 18    expressao -> expressao_unaria
Rule 19    expressao -> expressao_numerica
Rule 20    expressao -> expressao_identificador
Rule 21    expressao -> expressao_parenteses
Rule 22    expressao_binaria -> expressao EQ expressao
Rule 23    expressao_binaria -> expressao MAIOR_EQ expressao
Rule 24    expressao_binaria -> expressao MAIOR expressao
Rule 25    expressao_binaria -> expressao MENOR_EQ expressao
Rule 26    expressao_binaria -> expressao MENOR expressao
Rule 27    expressao_binaria -> expressao ADD expressao
Rule 28    expressao_binaria -> expressao SUB expressao
Rule 29    expressao_binaria -> expressao MUL expressao
Rule 30    expressao_binaria -> expressao DIV expressao
Rule 31    expressao_unaria -> SUB expressao
Rule 32    expressao_numerica -> NUM
Rule 33    expressao_identificador -> ID
Rule 34    expressao_parenteses -> LPAR expressao RPAR
Rule 35    atribuicao -> ID ATR expressao
Rule 36    chamada -> ID LPAR expressao_args RPAR
Rule 37    condicional -> SE expressao ENTAO corpo FIM
Rule 38    condicional -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 39    repeticao -> REPITA corpo ATE expressao
Rule 40    retorna -> RETORNA LPAR expressao RPAR
Rule 41    corpo -> <empty>
Rule 42    corpo -> composicao corpo
Rule 43    composicao -> atribuicao
Rule 44    composicao -> declaracao
Rule 45    composicao -> chamada
Rule 46    composicao -> condicional
Rule 47    composicao -> repeticao
Rule 48    composicao -> retorna
Rule 49    composicao -> leia
Rule 50    composicao -> escreva
Rule 51    leia -> LEIA LPAR expressao RPAR
Rule 52    escreva -> ESCREVA LPAR expressao RPAR

Terminals, with rules where they appear

ADD                  : 27
ATE                  : 39
ATR                  : 35
COLON                : 9
COMMA                : 12 15
DIV                  : 30
ENTAO                : 37 38
EQ                   : 22
ESCREVA              : 52
FIM                  : 7 37 38
FLUTUANTE            : 6
ID                   : 8 9 33 35 36
INTEIRO              : 5
LEIA                 : 51
LPAR                 : 8 34 36 40 51 52
MAIOR                : 24
MAIOR_EQ             : 23
MENOR                : 26
MENOR_EQ             : 25
MUL                  : 29
NUM                  : 32
REPITA               : 39
RETORNA              : 40
RPAR                 : 8 34 36 40 51 52
SE                   : 37 38
SENAO                : 38
SUB                  : 28 31
error                : 

Nonterminals, with rules where they appear

atribuicao           : 43
chamada              : 17 45
composicao           : 42
condicional          : 46
corpo                : 7 37 38 38 39 42
declaracao           : 3 11 12 44
declaracao_args      : 8 12
escreva              : 50
expressao            : 14 15 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 34 35 37 38 39 40 51 52
expressao_args       : 15 36
expressao_binaria    : 16
expressao_identificador : 20
expressao_numerica   : 19
expressao_parenteses : 21
expressao_unaria     : 18
funcao               : 4
leia                 : 49
procedimento         : 1 2
prototipo            : 7
repeticao            : 47
retorna              : 48
tipo                 : 8 9
top                  : 2 0

Parsing method: LALR

state 0

    (0) S' -> . top
    (1) top -> . procedimento
    (2) top -> . top procedimento
    (3) procedimento -> . declaracao
    (4) procedimento -> . funcao
    (9) declaracao -> . tipo COLON ID
    (7) funcao -> . prototipo corpo FIM
    (5) tipo -> . INTEIRO
    (6) tipo -> . FLUTUANTE
    (8) prototipo -> . tipo ID LPAR declaracao_args RPAR

    INTEIRO         shift and go to state 4
    FLUTUANTE       shift and go to state 2

    declaracao                     shift and go to state 1
    tipo                           shift and go to state 6
    top                            shift and go to state 7
    procedimento                   shift and go to state 8
    funcao                         shift and go to state 3
    prototipo                      shift and go to state 5

state 1

    (3) procedimento -> declaracao .

    INTEIRO         reduce using rule 3 (procedimento -> declaracao .)
    FLUTUANTE       reduce using rule 3 (procedimento -> declaracao .)
    $end            reduce using rule 3 (procedimento -> declaracao .)


state 2

    (6) tipo -> FLUTUANTE .

    COLON           reduce using rule 6 (tipo -> FLUTUANTE .)
    ID              reduce using rule 6 (tipo -> FLUTUANTE .)


state 3

    (4) procedimento -> funcao .

    INTEIRO         reduce using rule 4 (procedimento -> funcao .)
    FLUTUANTE       reduce using rule 4 (procedimento -> funcao .)
    $end            reduce using rule 4 (procedimento -> funcao .)


state 4

    (5) tipo -> INTEIRO .

    COLON           reduce using rule 5 (tipo -> INTEIRO .)
    ID              reduce using rule 5 (tipo -> INTEIRO .)


state 5

    (7) funcao -> prototipo . corpo FIM
    (41) corpo -> .
    (42) corpo -> . composicao corpo
    (43) composicao -> . atribuicao
    (44) composicao -> . declaracao
    (45) composicao -> . chamada
    (46) composicao -> . condicional
    (47) composicao -> . repeticao
    (48) composicao -> . retorna
    (49) composicao -> . leia
    (50) composicao -> . escreva
    (35) atribuicao -> . ID ATR expressao
    (9) declaracao -> . tipo COLON ID
    (36) chamada -> . ID LPAR expressao_args RPAR
    (37) condicional -> . SE expressao ENTAO corpo FIM
    (38) condicional -> . SE expressao ENTAO corpo SENAO corpo FIM
    (39) repeticao -> . REPITA corpo ATE expressao
    (40) retorna -> . RETORNA LPAR expressao RPAR
    (51) leia -> . LEIA LPAR expressao RPAR
    (52) escreva -> . ESCREVA LPAR expressao RPAR
    (5) tipo -> . INTEIRO
    (6) tipo -> . FLUTUANTE

    FIM             reduce using rule 41 (corpo -> .)
    ID              shift and go to state 17
    SE              shift and go to state 15
    REPITA          shift and go to state 25
    RETORNA         shift and go to state 23
    LEIA            shift and go to state 9
    ESCREVA         shift and go to state 24
    INTEIRO         shift and go to state 4
    FLUTUANTE       shift and go to state 2

    declaracao                     shift and go to state 19
    condicional                    shift and go to state 12
    composicao                     shift and go to state 10
    retorna                        shift and go to state 11
    repeticao                      shift and go to state 21
    atribuicao                     shift and go to state 22
    corpo                          shift and go to state 13
    chamada                        shift and go to state 14
    tipo                           shift and go to state 20
    escreva                        shift and go to state 16
    leia                           shift and go to state 18

state 6

    (9) declaracao -> tipo . COLON ID
    (8) prototipo -> tipo . ID LPAR declaracao_args RPAR

    COLON           shift and go to state 27
    ID              shift and go to state 26


state 7

    (0) S' -> top .
    (2) top -> top . procedimento
    (3) procedimento -> . declaracao
    (4) procedimento -> . funcao
    (9) declaracao -> . tipo COLON ID
    (7) funcao -> . prototipo corpo FIM
    (5) tipo -> . INTEIRO
    (6) tipo -> . FLUTUANTE
    (8) prototipo -> . tipo ID LPAR declaracao_args RPAR

    INTEIRO         shift and go to state 4
    FLUTUANTE       shift and go to state 2

    declaracao                     shift and go to state 1
    tipo                           shift and go to state 6
    procedimento                   shift and go to state 28
    funcao                         shift and go to state 3
    prototipo                      shift and go to state 5

state 8

    (1) top -> procedimento .

    INTEIRO         reduce using rule 1 (top -> procedimento .)
    FLUTUANTE       reduce using rule 1 (top -> procedimento .)
    $end            reduce using rule 1 (top -> procedimento .)


state 9

    (51) leia -> LEIA . LPAR expressao RPAR

    LPAR            shift and go to state 29


state 10

    (42) corpo -> composicao . corpo
    (41) corpo -> .
    (42) corpo -> . composicao corpo
    (43) composicao -> . atribuicao
    (44) composicao -> . declaracao
    (45) composicao -> . chamada
    (46) composicao -> . condicional
    (47) composicao -> . repeticao
    (48) composicao -> . retorna
    (49) composicao -> . leia
    (50) composicao -> . escreva
    (35) atribuicao -> . ID ATR expressao
    (9) declaracao -> . tipo COLON ID
    (36) chamada -> . ID LPAR expressao_args RPAR
    (37) condicional -> . SE expressao ENTAO corpo FIM
    (38) condicional -> . SE expressao ENTAO corpo SENAO corpo FIM
    (39) repeticao -> . REPITA corpo ATE expressao
    (40) retorna -> . RETORNA LPAR expressao RPAR
    (51) leia -> . LEIA LPAR expressao RPAR
    (52) escreva -> . ESCREVA LPAR expressao RPAR
    (5) tipo -> . INTEIRO
    (6) tipo -> . FLUTUANTE

    FIM             reduce using rule 41 (corpo -> .)
    ATE             reduce using rule 41 (corpo -> .)
    SENAO           reduce using rule 41 (corpo -> .)
    ID              shift and go to state 17
    SE              shift and go to state 15
    REPITA          shift and go to state 25
    RETORNA         shift and go to state 23
    LEIA            shift and go to state 9
    ESCREVA         shift and go to state 24
    INTEIRO         shift and go to state 4
    FLUTUANTE       shift and go to state 2

    declaracao                     shift and go to state 19
    condicional                    shift and go to state 12
    composicao                     shift and go to state 10
    retorna                        shift and go to state 11
    repeticao                      shift and go to state 21
    tipo                           shift and go to state 20
    corpo                          shift and go to state 30
    atribuicao                     shift and go to state 22
    chamada                        shift and go to state 14
    escreva                        shift and go to state 16
    leia                           shift and go to state 18

state 11

    (48) composicao -> retorna .

    ID              reduce using rule 48 (composicao -> retorna .)
    SE              reduce using rule 48 (composicao -> retorna .)
    REPITA          reduce using rule 48 (composicao -> retorna .)
    RETORNA         reduce using rule 48 (composicao -> retorna .)
    LEIA            reduce using rule 48 (composicao -> retorna .)
    ESCREVA         reduce using rule 48 (composicao -> retorna .)
    INTEIRO         reduce using rule 48 (composicao -> retorna .)
    FLUTUANTE       reduce using rule 48 (composicao -> retorna .)
    FIM             reduce using rule 48 (composicao -> retorna .)
    ATE             reduce using rule 48 (composicao -> retorna .)
    SENAO           reduce using rule 48 (composicao -> retorna .)


state 12

    (46) composicao -> condicional .

    ID              reduce using rule 46 (composicao -> condicional .)
    SE              reduce using rule 46 (composicao -> condicional .)
    REPITA          reduce using rule 46 (composicao -> condicional .)
    RETORNA         reduce using rule 46 (composicao -> condicional .)
    LEIA            reduce using rule 46 (composicao -> condicional .)
    ESCREVA         reduce using rule 46 (composicao -> condicional .)
    INTEIRO         reduce using rule 46 (composicao -> condicional .)
    FLUTUANTE       reduce using rule 46 (composicao -> condicional .)
    FIM             reduce using rule 46 (composicao -> condicional .)
    ATE             reduce using rule 46 (composicao -> condicional .)
    SENAO           reduce using rule 46 (composicao -> condicional .)


state 13

    (7) funcao -> prototipo corpo . FIM

    FIM             shift and go to state 31


state 14

    (45) composicao -> chamada .

    ID              reduce using rule 45 (composicao -> chamada .)
    SE              reduce using rule 45 (composicao -> chamada .)
    REPITA          reduce using rule 45 (composicao -> chamada .)
    RETORNA         reduce using rule 45 (composicao -> chamada .)
    LEIA            reduce using rule 45 (composicao -> chamada .)
    ESCREVA         reduce using rule 45 (composicao -> chamada .)
    INTEIRO         reduce using rule 45 (composicao -> chamada .)
    FLUTUANTE       reduce using rule 45 (composicao -> chamada .)
    FIM             reduce using rule 45 (composicao -> chamada .)
    ATE             reduce using rule 45 (composicao -> chamada .)
    SENAO           reduce using rule 45 (composicao -> chamada .)


state 15

    (37) condicional -> SE . expressao ENTAO corpo FIM
    (38) condicional -> SE . expressao ENTAO corpo SENAO corpo FIM
    (16) expressao -> . expressao_binaria
    (17) expressao -> . chamada
    (18) expressao -> . expressao_unaria
    (19) expressao -> . expressao_numerica
    (20) expressao -> . expressao_identificador
    (21) expressao -> . expressao_parenteses
    (22) expressao_binaria -> . expressao EQ expressao
    (23) expressao_binaria -> . expressao MAIOR_EQ expressao
    (24) expressao_binaria -> . expressao MAIOR expressao
    (25) expressao_binaria -> . expressao MENOR_EQ expressao
    (26) expressao_binaria -> . expressao MENOR expressao
    (27) expressao_binaria -> . expressao ADD expressao
    (28) expressao_binaria -> . expressao SUB expressao
    (29) expressao_binaria -> . expressao MUL expressao
    (30) expressao_binaria -> . expressao DIV expressao
    (36) chamada -> . ID LPAR expressao_args RPAR
    (31) expressao_unaria -> . SUB expressao
    (32) expressao_numerica -> . NUM
    (33) expressao_identificador -> . ID
    (34) expressao_parenteses -> . LPAR expressao RPAR

    ID              shift and go to state 35
    SUB             shift and go to state 36
    NUM             shift and go to state 41
    LPAR            shift and go to state 42

    expressao_binaria              shift and go to state 33
    chamada                        shift and go to state 34
    expressao_numerica             shift and go to state 40
    expressao                      shift and go to state 32
    expressao_identificador        shift and go to state 37
    expressao_parenteses           shift and go to state 38
    expressao_unaria               shift and go to state 39

state 16

    (50) composicao -> escreva .

    ID              reduce using rule 50 (composicao -> escreva .)
    SE              reduce using rule 50 (composicao -> escreva .)
    REPITA          reduce using rule 50 (composicao -> escreva .)
    RETORNA         reduce using rule 50 (composicao -> escreva .)
    LEIA            reduce using rule 50 (composicao -> escreva .)
    ESCREVA         reduce using rule 50 (composicao -> escreva .)
    INTEIRO         reduce using rule 50 (composicao -> escreva .)
    FLUTUANTE       reduce using rule 50 (composicao -> escreva .)
    FIM             reduce using rule 50 (composicao -> escreva .)
    ATE             reduce using rule 50 (composicao -> escreva .)
    SENAO           reduce using rule 50 (composicao -> escreva .)


state 17

    (35) atribuicao -> ID . ATR expressao
    (36) chamada -> ID . LPAR expressao_args RPAR

    ATR             shift and go to state 43
    LPAR            shift and go to state 44


state 18

    (49) composicao -> leia .

    ID              reduce using rule 49 (composicao -> leia .)
    SE              reduce using rule 49 (composicao -> leia .)
    REPITA          reduce using rule 49 (composicao -> leia .)
    RETORNA         reduce using rule 49 (composicao -> leia .)
    LEIA            reduce using rule 49 (composicao -> leia .)
    ESCREVA         reduce using rule 49 (composicao -> leia .)
    INTEIRO         reduce using rule 49 (composicao -> leia .)
    FLUTUANTE       reduce using rule 49 (composicao -> leia .)
    FIM             reduce using rule 49 (composicao -> leia .)
    ATE             reduce using rule 49 (composicao -> leia .)
    SENAO           reduce using rule 49 (composicao -> leia .)


state 19

    (44) composicao -> declaracao .

    ID              reduce using rule 44 (composicao -> declaracao .)
    SE              reduce using rule 44 (composicao -> declaracao .)
    REPITA          reduce using rule 44 (composicao -> declaracao .)
    RETORNA         reduce using rule 44 (composicao -> declaracao .)
    LEIA            reduce using rule 44 (composicao -> declaracao .)
    ESCREVA         reduce using rule 44 (composicao -> declaracao .)
    INTEIRO         reduce using rule 44 (composicao -> declaracao .)
    FLUTUANTE       reduce using rule 44 (composicao -> declaracao .)
    FIM             reduce using rule 44 (composicao -> declaracao .)
    ATE             reduce using rule 44 (composicao -> declaracao .)
    SENAO           reduce using rule 44 (composicao -> declaracao .)


state 20

    (9) declaracao -> tipo . COLON ID

    COLON           shift and go to state 27


state 21

    (47) composicao -> repeticao .

    ID              reduce using rule 47 (composicao -> repeticao .)
    SE              reduce using rule 47 (composicao -> repeticao .)
    REPITA          reduce using rule 47 (composicao -> repeticao .)
    RETORNA         reduce using rule 47 (composicao -> repeticao .)
    LEIA            reduce using rule 47 (composicao -> repeticao .)
    ESCREVA         reduce using rule 47 (composicao -> repeticao .)
    INTEIRO         reduce using rule 47 (composicao -> repeticao .)
    FLUTUANTE       reduce using rule 47 (composicao -> repeticao .)
    FIM             reduce using rule 47 (composicao -> repeticao .)
    ATE             reduce using rule 47 (composicao -> repeticao .)
    SENAO           reduce using rule 47 (composicao -> repeticao .)


state 22

    (43) composicao -> atribuicao .

    ID              reduce using rule 43 (composicao -> atribuicao .)
    SE              reduce using rule 43 (composicao -> atribuicao .)
    REPITA          reduce using rule 43 (composicao -> atribuicao .)
    RETORNA         reduce using rule 43 (composicao -> atribuicao .)
    LEIA            reduce using rule 43 (composicao -> atribuicao .)
    ESCREVA         reduce using rule 43 (composicao -> atribuicao .)
    INTEIRO         reduce using rule 43 (composicao -> atribuicao .)
    FLUTUANTE       reduce using rule 43 (composicao -> atribuicao .)
    FIM             reduce using rule 43 (composicao -> atribuicao .)
    ATE             reduce using rule 43 (composicao -> atribuicao .)
    SENAO           reduce using rule 43 (composicao -> atribuicao .)


state 23

    (40) retorna -> RETORNA . LPAR expressao RPAR

    LPAR            shift and go to state 45


state 24

    (52) escreva -> ESCREVA . LPAR expressao RPAR

    LPAR            shift and go to state 46


state 25

    (39) repeticao -> REPITA . corpo ATE expressao
    (41) corpo -> .
    (42) corpo -> . composicao corpo
    (43) composicao -> . atribuicao
    (44) composicao -> . declaracao
    (45) composicao -> . chamada
    (46) composicao -> . condicional
    (47) composicao -> . repeticao
    (48) composicao -> . retorna
    (49) composicao -> . leia
    (50) composicao -> . escreva
    (35) atribuicao -> . ID ATR expressao
    (9) declaracao -> . tipo COLON ID
    (36) chamada -> . ID LPAR expressao_args RPAR
    (37) condicional -> . SE expressao ENTAO corpo FIM
    (38) condicional -> . SE expressao ENTAO corpo SENAO corpo FIM
    (39) repeticao -> . REPITA corpo ATE expressao
    (40) retorna -> . RETORNA LPAR expressao RPAR
    (51) leia -> . LEIA LPAR expressao RPAR
    (52) escreva -> . ESCREVA LPAR expressao RPAR
    (5) tipo -> . INTEIRO
    (6) tipo -> . FLUTUANTE

    ATE             reduce using rule 41 (corpo -> .)
    ID              shift and go to state 17
    SE              shift and go to state 15
    REPITA          shift and go to state 25
    RETORNA         shift and go to state 23
    LEIA            shift and go to state 9
    ESCREVA         shift and go to state 24
    INTEIRO         shift and go to state 4
    FLUTUANTE       shift and go to state 2

    declaracao                     shift and go to state 19
    condicional                    shift and go to state 12
    composicao                     shift and go to state 10
    retorna                        shift and go to state 11
    repeticao                      shift and go to state 21
    tipo                           shift and go to state 20
    corpo                          shift and go to state 47
    atribuicao                     shift and go to state 22
    chamada                        shift and go to state 14
    escreva                        shift and go to state 16
    leia                           shift and go to state 18

state 26

    (8) prototipo -> tipo ID . LPAR declaracao_args RPAR

    LPAR            shift and go to state 48


state 27

    (9) declaracao -> tipo COLON . ID

    ID              shift and go to state 49


state 28

    (2) top -> top procedimento .

    INTEIRO         reduce using rule 2 (top -> top procedimento .)
    FLUTUANTE       reduce using rule 2 (top -> top procedimento .)
    $end            reduce using rule 2 (top -> top procedimento .)


state 29

    (51) leia -> LEIA LPAR . expressao RPAR
    (16) expressao -> . expressao_binaria
    (17) expressao -> . chamada
    (18) expressao -> . expressao_unaria
    (19) expressao -> . expressao_numerica
    (20) expressao -> . expressao_identificador
    (21) expressao -> . expressao_parenteses
    (22) expressao_binaria -> . expressao EQ expressao
    (23) expressao_binaria -> . expressao MAIOR_EQ expressao
    (24) expressao_binaria -> . expressao MAIOR expressao
    (25) expressao_binaria -> . expressao MENOR_EQ expressao
    (26) expressao_binaria -> . expressao MENOR expressao
    (27) expressao_binaria -> . expressao ADD expressao
    (28) expressao_binaria -> . expressao SUB expressao
    (29) expressao_binaria -> . expressao MUL expressao
    (30) expressao_binaria -> . expressao DIV expressao
    (36) chamada -> . ID LPAR expressao_args RPAR
    (31) expressao_unaria -> . SUB expressao
    (32) expressao_numerica -> . NUM
    (33) expressao_identificador -> . ID
    (34) expressao_parenteses -> . LPAR expressao RPAR

    ID              shift and go to state 35
    SUB             shift and go to state 36
    NUM             shift and go to state 41
    LPAR            shift and go to state 42

    expressao_binaria              shift and go to state 33
    chamada                        shift and go to state 34
    expressao_numerica             shift and go to state 40
    expressao                      shift and go to state 50
    expressao_identificador        shift and go to state 37
    expressao_parenteses           shift and go to state 38
    expressao_unaria               shift and go to state 39

state 30

    (42) corpo -> composicao corpo .

    FIM             reduce using rule 42 (corpo -> composicao corpo .)
    SENAO           reduce using rule 42 (corpo -> composicao corpo .)
    ATE             reduce using rule 42 (corpo -> composicao corpo .)


state 31

    (7) funcao -> prototipo corpo FIM .

    INTEIRO         reduce using rule 7 (funcao -> prototipo corpo FIM .)
    FLUTUANTE       reduce using rule 7 (funcao -> prototipo corpo FIM .)
    $end            reduce using rule 7 (funcao -> prototipo corpo FIM .)


state 32

    (37) condicional -> SE expressao . ENTAO corpo FIM
    (38) condicional -> SE expressao . ENTAO corpo SENAO corpo FIM
    (22) expressao_binaria -> expressao . EQ expressao
    (23) expressao_binaria -> expressao . MAIOR_EQ expressao
    (24) expressao_binaria -> expressao . MAIOR expressao
    (25) expressao_binaria -> expressao . MENOR_EQ expressao
    (26) expressao_binaria -> expressao . MENOR expressao
    (27) expressao_binaria -> expressao . ADD expressao
    (28) expressao_binaria -> expressao . SUB expressao
    (29) expressao_binaria -> expressao . MUL expressao
    (30) expressao_binaria -> expressao . DIV expressao

    ENTAO           shift and go to state 55
    EQ              shift and go to state 57
    MAIOR_EQ        shift and go to state 51
    MAIOR           shift and go to state 58
    MENOR_EQ        shift and go to state 53
    MENOR           shift and go to state 52
    ADD             shift and go to state 60
    SUB             shift and go to state 54
    MUL             shift and go to state 56
    DIV             shift and go to state 59


state 33

    (16) expressao -> expressao_binaria .

    EQ              reduce using rule 16 (expressao -> expressao_binaria .)
    MAIOR_EQ        reduce using rule 16 (expressao -> expressao_binaria .)
    MAIOR           reduce using rule 16 (expressao -> expressao_binaria .)
    MENOR_EQ        reduce using rule 16 (expressao -> expressao_binaria .)
    MENOR           reduce using rule 16 (expressao -> expressao_binaria .)
    ADD             reduce using rule 16 (expressao -> expressao_binaria .)
    SUB             reduce using rule 16 (expressao -> expressao_binaria .)
    MUL             reduce using rule 16 (expressao -> expressao_binaria .)
    DIV             reduce using rule 16 (expressao -> expressao_binaria .)
    ENTAO           reduce using rule 16 (expressao -> expressao_binaria .)
    RPAR            reduce using rule 16 (expressao -> expressao_binaria .)
    ID              reduce using rule 16 (expressao -> expressao_binaria .)
    SE              reduce using rule 16 (expressao -> expressao_binaria .)
    REPITA          reduce using rule 16 (expressao -> expressao_binaria .)
    RETORNA         reduce using rule 16 (expressao -> expressao_binaria .)
    LEIA            reduce using rule 16 (expressao -> expressao_binaria .)
    ESCREVA         reduce using rule 16 (expressao -> expressao_binaria .)
    INTEIRO         reduce using rule 16 (expressao -> expressao_binaria .)
    FLUTUANTE       reduce using rule 16 (expressao -> expressao_binaria .)
    FIM             reduce using rule 16 (expressao -> expressao_binaria .)
    ATE             reduce using rule 16 (expressao -> expressao_binaria .)
    SENAO           reduce using rule 16 (expressao -> expressao_binaria .)
    COMMA           reduce using rule 16 (expressao -> expressao_binaria .)


state 34

    (17) expressao -> chamada .
